--- a/style.css
+++ b/style.css
@@ -1,15 +1,20 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;500;600&family=Lato&family=Roboto&family=Source+Sans+Pro:wght@400;900&display=swap');
 body {
-    color: brown;
+    font-family: 'Inter', sans-serif;
+    font-family: 'Lato', sans-serif;
+    font-family: 'Roboto', sans-serif;
+    font-family: 'Source Sans Pro', sans-serif;
 }
 
-h1 {
-    color: blue;
+
+/* container */
+
+.container {
+    padding-left: 2rem;
+    padding-right: 2rem;
 }
 
-#lib-header {
-    color: green;
-}
-
-.para {
-    color: blueviolet;
+.container-center {
+    max-width: 600px;
+    margin: auto;
 }
