--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;500;600&family=Lato&family=Roboto&family=Source+Sans+Pro:wght@400;900&display=swap');
+:root {
+    --primary-color: #7c3aed
+}
+
 body {
     font-family: 'Inter', sans-serif;
     font-family: 'Lato', sans-serif;
@@ -6,15 +10,56 @@ body {
     font-family: 'Source Sans Pro', sans-serif;
 }
 
+hr {
+    margin: 2rem 0rem;
+}
+
 
 /* container */
 
 .container {
-    padding-left: 2rem;
-    padding-right: 2rem;
+    /* padding-left: 2rem;
+    padding-right: 2rem; */
+    padding: 0rem 5rem
 }
 
 .container-center {
     max-width: 600px;
     margin: auto;
+}
+
+
+/* Links */
+
+.link {
+    text-decoration: none;
+    padding: 0.5rem 1rem;
+    color: white;
+}
+
+.link-primary {
+    background-color: var(--primary-color);
+    border-radius: 0.5rem;
+    color: white;
+}
+
+.link-secondary {
+    color: var(--primary-color);
+    border-radius: 0.5rem;
+    border: 1px solid var(--primary-color);
+}
+
+
+/*look into  into  BEM nming convention for css*/
+
+
+/* lists */
+
+.list-non-bullet {
+    list-style: none;
+}
+
+.list-item-inline {
+    display: inline;
+    padding: 0rem 0.5rem;
 }
