--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 :root {
     --primary-color: #7c3aed;
     --dark-gray: #475569;
+    --off-white: #e2e8f0;
 }
 
 body {
@@ -112,4 +113,19 @@ hr {
 
 .hero .hero-heading .heading-inverted {
     color: var(--primary-color)
+}
+
+
+/* Section */
+
+.section {
+    padding: 2rem;
+}
+
+.section h1 {
+    text-align: center;
+}
+
+.ow {
+    background-color: var(--off-white);
 }
