--- a/style.css
+++ b/style.css
@@ -6,10 +6,8 @@
 }
 
 body {
-    font-family: 'Inter', sans-serif;
-    font-family: 'Lato', sans-serif;
-    font-family: 'Roboto', sans-serif;
     font-family: 'Source Sans Pro', sans-serif;
+    margin: 0rem;
 }
 
 hr {
@@ -72,7 +70,7 @@ hr {
     background-color: var(--primary-color);
     color: white;
     padding: 1rem;
-    border-bottom-left-radius: 1rem;
+    border-top-right-radius: 1rem;
     /* border-top-left-radius: 3rem; */
 }
 
@@ -128,4 +126,16 @@ hr {
 
 .ow {
     background-color: var(--off-white);
+}
+
+.footer {
+    background-color: var(--primary-color);
+    padding: 2rem;
+    text-align: center;
+    color: white;
+    border-bottom-left-radius: 1rem;
+}
+
+.footer .link {
+    color: white;
 }
