--- a/style.css
+++ b/style.css
@@ -14,6 +14,12 @@ hr {
     margin: 2rem 0rem;
 }
 
+p {
+    font-size: large;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    align-self: center;
+}
+
 
 /* container */
 
@@ -24,8 +30,9 @@ hr {
 }
 
 .container-center {
-    max-width: 600px;
+    max-width: 500px;
     margin: auto;
+    padding: 1rem;
 }
 
 
@@ -43,9 +50,9 @@ hr {
 }
 
 .link-secondary {
-    color: var(--primary-color);
+    color: var(--dark-gray);
     border-radius: 0.5rem;
-    border: 1px solid var(--primary-color);
+    border: 0.2rem solid var(--dark-gray);
 }
 
 
@@ -75,6 +82,7 @@ hr {
 }
 
 .navigation .nav-brand {
+    font-size: xx-large;
     font-weight: bold;
 }
 
@@ -104,7 +112,7 @@ hr {
 }
 
 .hero .hero-heading {
-    padding: 1rem;
+    padding: 2rem;
     text-align: center;
     color: var(--dark-gray);
 }
@@ -118,6 +126,7 @@ hr {
 
 .section {
     padding: 2rem;
+    text-align: center;
 }
 
 .section h1 {
@@ -134,6 +143,11 @@ hr {
     text-align: center;
     color: white;
     border-bottom-left-radius: 1rem;
+}
+
+.footer .footer-header {
+    font-weight: bold;
+    font-size: xx-large;
 }
 
 .footer .link {
