--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;500;600&family=Lato&family=Roboto&family=Source+Sans+Pro:wght@400;900&display=swap');
 :root {
-    --primary-color: #7c3aed;
+    --primary-color: #6C63FF;
     --dark-gray: #475569;
     --off-white: #e2e8f0;
 }
@@ -96,6 +96,7 @@ p {
 
 .navigation .link-active {
     font-weight: bold;
+    color: white;
 }
 
 
